# rag-handbook-qa

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: chunking.py  config.py  embeddings.py  ingest.py  llm.py  main.py  models.py  retrieval.py  vectorstore.py
corpus/: benefits-and-401k.md  employee-handbook.md  expenses-and-travel.md  pto-and-leave.md  remote-work-policy.md  security-and-devices.md
docker/: entrypoint.sh
eval/: golden.jsonl  metrics.py  run_eval.py
scripts/: ingest.py
tests/: conftest.py  test_api.py  test_chunking.py  test_embeddings.py  test_ingest.py  test_retrieval.py  test_vectorstore.py
