[project]
name = "rag-handbook-qa"
version = "0.1.0"
description = "A production-shaped RAG service: ingest documents, answer questions with cited sources, and measure retrieval quality."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "psycopg[binary]>=3.1",
    "pgvector>=0.2.5",
    "numpy>=1.26",
    "pypdf>=4.0",
    "openai>=1.30",
    "anthropic>=0.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    # Third-party deprecation from Starlette's TestClient; not our code.
    "ignore:Using `httpx`",
]
